module12/yaml/service-0.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-server-service-0
  namespace: service-mesh
  labels:
    run: http-server-0
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    run: http-server-0
