module12/yaml/service-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-server-service-1
  namespace: service-mesh
  labels:
    run: http-server-1
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    run: http-server-1
