module12/yaml/service-2.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-server-service-2
  namespace: service-mesh
  labels:
    run: http-server-2
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    run: http-server-2
