module12/yaml/istio-canary.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: http-server
spec:
  gateways:
    - http-server
  hosts:
    - http-server.io
  http:
    - match:
        - headers:
            user:
              exact: chenxinpei
        - port: 443
      route:
        - destination:
            host: http-server.io
            subset: canary
            port:
              number: 80
    - route:
        - destination:
            host: http-server.io
            subset: stable
            port:
              number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: http-server
spec:
  host: http-server.io
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
  subsets:
    - name: stable
      labels:
        track: stable
    - name: canary
      labels:
        track: canary
      trafficPolicy:
        loadBalancer:
          simple: ROUND_ROBIN
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: http-server
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - http-server.io
      port:
        name: http-server
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: http-server-credential
