module12/yaml/istio.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: http-server
spec:
  gateways:
    - http-server
  hosts:
    - http-server.io
  http:
    - match:
        - port: 443
      route:
        - destination:
            host: http-server-service-0
            port:
              number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: http-server
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - http-server.io
      port:
        name: http-server
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: http-server-credential
